feat: Backend changes with category add

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -13,8 +13,8 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Poetry
-RUN pip install poetry
+# Install uv and poetry
+RUN pip install uv poetry
 
 # Set work directory
 WORKDIR /app
@@ -22,8 +22,10 @@ WORKDIR /app
 # Copy Poetry files
 COPY pyproject.toml poetry.lock* ./
 
-# Install dependencies
-RUN poetry install --no-dev && rm -rf $POETRY_CACHE_DIR
+# Install dependencies using poetry
+RUN poetry config virtualenvs.in-project true && \
+    poetry install --no-root && \
+    rm -rf $POETRY_CACHE_DIR
 
 # Copy application
 COPY . .
@@ -36,5 +38,5 @@ USER appuser
 # Expose port
 EXPOSE 8000
 
-# Run the application
+# Run the application using poetry
 CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
