--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -17,6 +17,7 @@ pydantic = "^2.5.0"
 pydantic-settings = "^2.1.0"
 python-dotenv = "^1.0.0"
 python-multipart = "^0.0.6"
+boto3 = "^1.40.35"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
@@ -25,7 +26,7 @@ flake8 = "^6.1.0"
 pre-commit = "^3.6.0"
 pytest = "^7.4.3"
 pytest-asyncio = "^0.21.1"
-httpx = "^0.25.2"
+httpx = "^0.28.1"
 
 [build-system]
 requires = ["poetry-core"]
