feat: DO integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,8 @@ services:
       CLERK_SECRET_KEY: ${CLERK_SECRET_KEY}
       
       # DigitalOcean Spaces
-      DO_SPACES_KEY: ${DO_SPACES_KEY}
-      DO_SPACES_SECRET: ${DO_SPACES_SECRET}
+      DIGITAL_OCEAN_ACCESS_KEY: ${DIGITAL_OCEAN_ACCESS_KEY}
+      DIGITAL_OCEAN_ACCESS_SECRET: ${DIGITAL_OCEAN_ACCESS_SECRET}
       DO_SPACES_ENDPOINT: ${DO_SPACES_ENDPOINT:-https://nyc3.digitaloceanspaces.com}
       DO_SPACES_REGION: ${DO_SPACES_REGION:-nyc3}
       DO_SPACES_BUCKET: ${DO_SPACES_BUCKET}
