--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -4,7 +4,7 @@ FROM python:3.11-slim
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     POETRY_NO_INTERACTION=1 \
-    POETRY_VENV_IN_PROJECT=1 \
+    POETRY_VENV_IN_PROJECT=0 \
     POETRY_CACHE_DIR=/tmp/poetry_cache
 
 # Install system dependencies
@@ -13,8 +13,8 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Install uv and poetry
-RUN pip install uv poetry
+# Install poetry
+RUN pip install poetry
 
 # Set work directory
 WORKDIR /app
@@ -22,21 +22,23 @@ WORKDIR /app
 # Copy Poetry files
 COPY pyproject.toml poetry.lock* ./
 
-# Install dependencies using poetry
-RUN poetry config virtualenvs.in-project true && \
-    poetry install --no-root && \
+# Install dependencies directly to system Python
+RUN poetry config virtualenvs.create false && \
+    poetry install --only=main --no-root && \
     rm -rf $POETRY_CACHE_DIR
 
 # Copy application
 COPY . .
 
-# Create non-root user
+# Create non-root user and change ownership
 RUN adduser --disabled-password --gecos '' appuser && \
     chown -R appuser:appuser /app
+
+# Switch to non-root user
 USER appuser
 
 # Expose port
 EXPOSE 8000
 
-# Run the application using poetry
-CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the application directly with uvicorn
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
