--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -18,6 +18,8 @@ pydantic-settings = "^2.1.0"
 python-dotenv = "^1.0.0"
 python-multipart = "^0.0.6"
 boto3 = "^1.40.35"
+pyjwt = "^2.8.0"
+cryptography = "^41.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
